# Yukti

./: .gitignore  Dockerfile  GITHUB_READY.txt  GITHUB_SETUP.md  README.md  alembic.ini  docker-compose.full.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  gate-promotion.yml
deploy/: alert_rules.yml  init-pgvector.sql  oracle-bootstrap.sh  prometheus.yml  supervisor.conf
deploy/grafana/dashboards/: yukti.json
deploy/nginx/: yukti.conf
docs/: ARCHITECTURE.md  ORACLE_DEPLOY.md  RUNBOOK.md
docs/superpowers/plans/: 2026-04-22-signal-quality-upgrade.md
docs/superpowers/specs/: 2026-04-22-signal-quality-upgrade-design.md
scratch/: check_dhan.py  check_pnl.py  probe_daily.py  probe_sandbox.py  test_dhan_data.py  test_prod_quote.py  test_raw_dhan.py  test_raw_prod.py  test_raw_sandbox.py  test_sandbox_multi.py  test_sandbox_quote.py
scripts/: ab_report.py  backfill_candles.py  bootstrap.py  crash_alert.py  export_training_data.py  index_journal_to_vectorstore.py  run_backtest.py  secrets_loader.py  seed_demo_data.py  test_openai_provider.py  test_rag_retriever.py  universe_loader.py
tests/: conftest.py  test_state.py
tests/integration/: test_trade_cycle.py
tests/unit/: test_arjun.py  test_config.py  test_context_two_layer.py  test_indicators_daily.py  test_memory_retrieval.py  test_patterns_orb_vwap.py  test_risk.py  test_signals.py  test_universe_scanner.py
trainer/: run_on_cloud.sh  train_adapter.py
webapp/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
webapp/src/: App.tsx  main.tsx
webapp/src/components/: Layout.tsx  ui.tsx
webapp/src/components/ui/: index.tsx
webapp/src/hooks/: useLive.ts  useQuery.ts
webapp/src/pages/: Dashboard.tsx  index.tsx
webapp/src/styles/: globals.css
yukti/: __main__.py  artifacts.py  config.py  metrics.py
yukti/agents/: arjun.py  journal.py  langchain_rag.py  langchain_vectorstore.py  memory.py  openai_provider.py  rag_schemas.py
yukti/api/: main.py
yukti/api/routes/: positions.py
yukti/api/static/: index.html
yukti/data/: models.py
yukti/execution/: broker_factory.py  dhan_client.py  monitor.py  order_sm.py
yukti/jobs/: meta_lessons.py
yukti/risk/: __init__.py
yukti/scheduler/: jobs.py
yukti/services/: control_plane_service.py  market_scan_service.py  universe_scanner_service.py
yukti/signals/: context.py  indicators.py  patterns.py
(+6 files in other folders)
