[project]
name        = "yukti"
version     = "0.1.0"
description = "Autonomous NSE/BSE trading agent — DhanHQ + Claude"
readme      = "README.md"
requires-python = ">=3.11"

dependencies = [
    # ── Core runtime ──────────────────────────────────
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=8.2",
    "structlog>=24.1",

    # ── AI ────────────────────────────────────────────
    "anthropic>=0.40",
    "google-genai>=1.0",            # Gemini 2.0 Flash provider
    "voyageai>=0.2",
    "langchain>=0.0.300",
    # Optional: add OpenAI SDK if you plan to use OpenAI provider
    "openai>=0.28"

    # ── Signals ──────────────────────────────────────
    "pandas>=2.2",
    "numpy>=1.26",
    "pandas-ta>=0.3.14b",

    # ── Broker ───────────────────────────────────────
    "dhanhq>=2.0",

    # ── Data stores ──────────────────────────────────
    "redis[hiredis]>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2",

    # ── API + web portal ─────────────────────────────
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "aiofiles>=23.2",          # static file serving for React SPA
    "python-multipart>=0.0.9",

    # ── Scheduler ────────────────────────────────────
    "apscheduler>=3.10",

    # ── Telegram ─────────────────────────────────────
    "python-telegram-bot>=21.0",

    # ── Metrics ──────────────────────────────────────
    "prometheus-client>=0.19",

    # ── News / NSE ───────────────────────────────────
    "feedparser>=6.0",
    "nsepy>=0.8",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "vcrpy>=6.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "ipython>=8.20",
]

[project.scripts]
yukti         = "yukti.__main__:main"
yukti-migrate = "yukti.data.migrations:run"
yukti-backtest= "yukti.backtest.engine:run_cli"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true
